--- a/program.htm
+++ b/program.htm
@@ -640,9 +640,9 @@ Wine</h3>
             <a href="program/wine/cpp_dlg_event.htm">
             Handle Event</a><br>
             
-            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-            <a href="program/wine/cpp_dlg_keyboard.htm">
-            Keyboard</a><br>
+        &emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="program/wine/cpp_keyboard.htm">
+        Keyboard Event</a><br>
             
             &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
             <a href="program/wine/cpp_dlg_mouse.htm">
