--- a/program/nasm/win32x_dlg_window.htm
+++ b/program/nasm/win32x_dlg_window.htm
@@ -145,7 +145,7 @@ $ make
 $ make run
 </pre>
 <p>
-<img style="border:0px" src="win32x_dlg_window/1.jpg" class="maxSize">
+<img style="border:0px" src="win32_dlg_window/1.jpg" class="maxSize">
 </p>
 
 <p>
