--- a/program/masm32/hello.htm
+++ b/program/masm32/hello.htm
@@ -119,7 +119,7 @@ $ make
 $ make run
 </pre>
 <p>
-<img style="border:0px" src="hello/1.jpg" class="maxSize">
+<img style="border:0px" src="../nasm/win32_hello/1.jpg" class="maxSize">
 </p>
 
 <p>
