--- a/program/masm32/dlg_event.htm
+++ b/program/masm32/dlg_event.htm
@@ -158,7 +158,7 @@ $ make
 $ make run
 </pre>
 <p>
-<img style="border:0px" src="dlg_window/1.jpg" class="maxSize">
+<img style="border:0px" src="../nasm/win32_dlg_window/1.jpg" class="maxSize">
 </p>
 
 <p>
