--- a/program/masm32/dlg_window.htm
+++ b/program/masm32/dlg_window.htm
@@ -142,7 +142,7 @@ $ make
 $ make run
 </pre>
 <p>
-<img style="border:0px" src="dlg_window/1.jpg" class="maxSize"><br><br>
+<img style="border:0px" src="../nasm/win32_dlg_window/1.jpg" class="maxSize"><br><br>
 </p>
 
 <p>
