--- a/program/hla/win32_dlg_window.htm
+++ b/program/hla/win32_dlg_window.htm
@@ -142,7 +142,7 @@ $ make
 $ make run
 </pre>
 <p>
-<img style="border:0px" src="win32_dlg_window/1.jpg" class="maxSize">
+<img style="border:0px" src="../nasm/win32_dlg_window/1.jpg" class="maxSize">
 </p>
 
 <p>
