--- a/program/hla/win32_setup.htm
+++ b/program/hla/win32_setup.htm
@@ -64,7 +64,7 @@ $ WINEPREFIX=/home/user/.wine_amd64 box86 wine winecfg
 
 <p>
 DPI設定成144<br>
-<img style="border:0px" src="win32_setup/1.jpg" class="maxSize"><br><br>
+<img style="border:0px" src="../nasm/win32_setup/1.jpg" class="maxSize"><br><br>
 
 接着使用司徒已經解開的檔案
 </p>
@@ -81,7 +81,7 @@ $ cp -a win32/hla /home/user/.wine_amd64/drive_c/
 $ WINEPREFIX=/home/user/.wine_amd64 box86 wine regedit
 </pre>
 <p>
-<img style="border:0px" src="win32_setup/2.jpg" class="maxSize"><br><br>
+<img style="border:0px" src="win32_setup/1.jpg" class="maxSize"><br><br>
 
 接着測試是否可以正常執行程式
 </p>
@@ -89,7 +89,7 @@ $ WINEPREFIX=/home/user/.wine_amd64 box86 wine regedit
 $ WINEPREFIX=/home/user/.wine_amd64 box86 wine /home/user/.wine_amd64/drive_c/hla/demo.exe
 </pre>
 <p>
-<img style="border:0px" src="win32_setup/3.jpg" class="maxSize"><br>
+<img style="border:0px" src="../nasm/win32_setup/2.jpg" class="maxSize"><br>
 P.S. 所有需要的Share Library(*.so and *.dll)都必須成功載入，否者將無法正確執行Windows PE程式
 </p>
 
