--- a/program/fasm/win32_dlg_event.htm
+++ b/program/fasm/win32_dlg_event.htm
@@ -174,7 +174,7 @@ $ make
 $ make run
 </pre>
 <p>
-<img style="border:0px" style="border:0px" src="win32_dlg_window/1.jpg" class="maxSize">
+<img style="border:0px" style="border:0px" src="../nasm/win32_dlg_window/1.jpg" class="maxSize">
 </p>
 
 <p>
