--- a/program/fasm/win32_hello.htm
+++ b/program/fasm/win32_hello.htm
@@ -115,7 +115,7 @@ $ make
 $ make run
 </pre>
 <p>
-<img style="border:0px" style="border:0px" src="win32_hello/1.jpg" class="maxSize">
+<img style="border:0px" style="border:0px" src="../nasm/win32_hello/1.jpg" class="maxSize">
 </p>
 
 <p>
