--- a/program/wine/cpp_setup.htm
+++ b/program/wine/cpp_setup.htm
@@ -59,8 +59,8 @@ $ wine winecfg
 </pre><br>
 
 <p>
-DPI設定成192<br>
-<img src="cpp_setup/1.jpg" class="maxSize">
+DPI設定成144<br>
+<img src="../nasm/win32_setup/1.jpg" class="maxSize">
 </p>
 
 <p>
