--- a/program/wine/arm64_hello.htm
+++ b/program/wine/arm64_hello.htm
@@ -97,7 +97,7 @@ $ winegcc main.s -o main
 $ wine ./main.exe
 </pre>
 <p>
-<img style="border:0px" src="cpp_hello/1.jpg" class="maxSize">
+<img style="border:0px" src="../nasm/win32_hello/1.jpg" class="maxSize">
 </p>
 
 <p>
