--- a/program/wine/cpp_hello.htm
+++ b/program/wine/cpp_hello.htm
@@ -79,7 +79,7 @@ $ winegcc main.c -o main
 $ wine ./main.exe
 </pre>
 <p>
-<img style="border:0px" src="cpp_hello/1.jpg" class="maxSize">
+<img style="border:0px" src="../nasm/win32_hello/1.jpg" class="maxSize">
 </p>
 
 <p>
