--- a/program/wine/cpp_keyboard.htm
+++ b/program/wine/cpp_keyboard.htm
@@ -127,7 +127,7 @@ $ winegcc main.c -o main -lgdi32
 $ wine ./main.exe
 </pre>
 <p>
-<img style="border:0px" src="cpp_keyboard/1.jpg" class="maxSize">
+<img style="border:0px" src="../nasm/win32_keyboard/1.jpg" class="maxSize">
 </p>
 
 <p>
