--- a/program.htm
+++ b/program.htm
@@ -447,6 +447,10 @@ Netwide Assembler (NASM)</h3>
             <a href="program/nasm/win32x_dlg_event.htm">
             Handle Event</a><br>
 
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="program/nasm/win32x_keyboard.htm">
+        Keyboard Event</a><br>
+
 &oplus;
 <b>Assembly (x64)</b><br>
 
