MASM32 How to handle keyboard event.

--- a/program.htm
+++ b/program.htm
@@ -506,6 +506,10 @@ Hello, world!</a><br>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="program/masm32/dlg_event.htm">
     Handle Event</a><br>
+
+&lowast;
+<a href="program/masm32/keyboard.htm">
+Keyboard Event</a><br>
 <br><br><br><br>
 
 <div id="hla"></div>
