--- a/program/hla/win32_dlg_event.htm
+++ b/program/hla/win32_dlg_event.htm
@@ -75,11 +75,11 @@ readonly
 
 procedure WndProc(hWnd:dword; uMsg:uns32; wParam:dword; lParam:dword); @stdcall;
 begin WndProc;
-    if (uMsg = w.WM_CLOSE) then
+    if (uMsg == w.WM_CLOSE) then
         w.DestroyWindow(hWnd);
         xor(eax, eax);
         exit WndProc;
-    elseif (uMsg = w.WM_DESTROY) then
+    elseif (uMsg == w.WM_DESTROY) then
         w.PostQuitMessage(0);
         xor(eax, eax);
         exit WndProc;
