--- a/program.htm
+++ b/program.htm
@@ -547,6 +547,10 @@ hello, world!</a><br>
         <a href="program/hla/win32_dlg_event.htm">
         Handle Event</a><br>
 
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="program/hla/win32_keyboard.htm">
+    Keyboard Event</a><br>
+
 &lowast;
 <a href="program/hla/fix_wc_dialog.htm">
 解決w.WC_DIALOG定義錯誤問題</a><br>
