--- a/program.htm
+++ b/program.htm
@@ -664,9 +664,9 @@ Wine</h3>
         <a href="program/wine/cpp_keyboard.htm">
         Keyboard Event</a><br>
             
-            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-            <a href="program/wine/cpp_dlg_mouse.htm">
-            Mouse</a><br>
+        &emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="program/wine/cpp_mouse.htm">
+        Mouse Event</a><br>
             
             &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
             <a href="program/wine/cpp_dlg_timer.htm">
