--- a/program/wine/cpp_keyboard.htm
+++ b/program/wine/cpp_keyboard.htm
@@ -45,7 +45,7 @@
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
 <h3>Wine &gt;&gt; C/C++</h3>
-<p><b>Keyboard</b></p>
+<p><b>Keyboard Event</b></p>
 <hr size="1">
 <p>
 參考資訊：<br>
@@ -123,7 +123,7 @@ int WINAPI WinMain(HINSTANCE hInstance, HINSTANCE hPrevInstance, LPSTR lpCmdLine
 編譯、執行
 </p>
 <pre>
-$ winegcc main.c -o main -lgdi32
+$ winegcc main.c -o main
 $ wine ./main.exe
 </pre>
 <p>
