--- a/program/wine/cpp_mouse.htm
+++ b/program/wine/cpp_mouse.htm
@@ -106,8 +106,10 @@ int WINAPI WinMain(HINSTANCE hInstance, HINSTANCE hPrevInstance, LPSTR lpCmdLine
     ExitProcess(0);
     return 0;
 }
-</pre><br>
+</pre>
 <p>
+<b>Line 14~16</b>：將滑鼠座標顯示在視窗標題<br><br>
+
 編譯、執行
 </p>
 <pre>
