NASM How to handle mouse event.

--- a/program.htm
+++ b/program.htm
@@ -425,6 +425,10 @@ Netwide Assembler (NASM)</h3>
         <a href="program/nasm/win32_keyboard.htm">
         Keyboard Event</a><br>
 
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="program/nasm/win32_mouse.htm">
+        Mouse Event</a><br>
+
     &emsp;&emsp;&emsp;&emsp;&oplus;
     <b>Win32 API (NASMX)</b><br>
 
