NASMX How to handle mouse event.

--- a/program.htm
+++ b/program.htm
@@ -455,6 +455,10 @@ Netwide Assembler (NASM)</h3>
         <a href="program/nasm/win32x_keyboard.htm">
         Keyboard Event</a><br>
 
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="program/nasm/win32x_mouse.htm">
+        Mouse Event</a><br>
+
 &oplus;
 <b>Assembly (x64)</b><br>
 
