MASM32 How to handle mouse event.

--- a/program.htm
+++ b/program.htm
@@ -518,6 +518,10 @@ Hello, world!</a><br>
 &lowast;
 <a href="program/masm32/keyboard.htm">
 Keyboard Event</a><br>
+
+&lowast;
+<a href="program/masm32/mouse.htm">
+Mouse Event</a><br>
 <br><br><br><br>
 
 <div id="hla"></div>
