FASM How to handle mouse event.

--- a/program.htm
+++ b/program.htm
@@ -636,6 +636,10 @@ Flat Assembler (FASM)</h3>
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
         <a href="program/fasm/win32_keyboard.htm">
         Keyboard Event</a><br>
+        
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="program/fasm/win32_mouse.htm">
+        Mouse Event</a><br>
 <br><br><br><br>
 
 <div id="wine"></div>
