Canon wordtank Z900 Solder JTAG pins for development.

--- a/umpc.htm
+++ b/umpc.htm
@@ -1147,6 +1147,10 @@ Canon wordtank Z900</h3>
 拆機</a><br>
 
 &lowast;
+<a href="umpc/z900/develop.htm">
+開發機</a><br>
+
+&lowast;
 <a href="umpc/z900/find_pin.htm">
 解焊元件找腳位</a><br>
 
