--- a/program.htm
+++ b/program.htm
@@ -688,9 +688,9 @@ Wine</h3>
         <a href="program/wine/cpp_mouse.htm">
         Mouse Event</a><br>
             
-            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-            <a href="program/wine/cpp_dlg_timer.htm">
-            Timer</a><br>
+        &emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="program/wine/cpp_timer.htm">
+        Set Timer</a><br>
 
             &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
             <a href="program/wine/cpp_dlg_scrollbar.htm">
