--- a/program.htm
+++ b/program.htm
@@ -429,6 +429,10 @@ Netwide Assembler (NASM)</h3>
         <a href="program/nasm/win32_mouse.htm">
         Mouse Event</a><br>
 
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="program/nasm/win32_timer.htm">
+        Set Timer</a><br>
+
     &emsp;&emsp;&emsp;&emsp;&oplus;
     <b>Win32 API (NASMX)</b><br>
 
