--- a/program/wine/cpp_timer.htm
+++ b/program/wine/cpp_timer.htm
@@ -115,7 +115,7 @@ $ winegcc main.c -o main
 $ wine ./main.exe
 </pre>
 <p>
-<img style="border:0px" src="../nasm/cpp_timer/1.jpg" class="maxSize">
+<img style="border:0px" src="../nasm/win32_timer/1.jpg" class="maxSize">
 </p>
 
 <p>
