--- a/program.htm
+++ b/program.htm
@@ -463,6 +463,10 @@ Netwide Assembler (NASM)</h3>
         <a href="program/nasm/win32x_mouse.htm">
         Mouse Event</a><br>
 
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="program/nasm/win32x_timer.htm">
+        Set Timer</a><br>
+
 &oplus;
 <b>Assembly (x64)</b><br>
 
