MASM32 How to set timer.

--- a/program.htm
+++ b/program.htm
@@ -530,6 +530,10 @@ Keyboard Event</a><br>
 &lowast;
 <a href="program/masm32/mouse.htm">
 Mouse Event</a><br>
+
+&lowast;
+<a href="program/masm32/timer.htm">
+Set Timer</a><br>
 <br><br><br><br>
 
 <div id="hla"></div>
