--- a/program.htm
+++ b/program.htm
@@ -579,6 +579,10 @@ hello, world!</a><br>
     <a href="program/hla/win32_mouse.htm">
     Mouse Event</a><br>
 
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="program/hla/win32_timer.htm">
+    Set Timer</a><br>
+
 &lowast;
 <a href="program/hla/fix_wc_dialog.htm">
 解決w.WC_DIALOG定義錯誤問題</a><br>
