--- a/program.htm
+++ b/program.htm
@@ -656,6 +656,10 @@ Flat Assembler (FASM)</h3>
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
         <a href="program/fasm/win32_mouse.htm">
         Mouse Event</a><br>
+        
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="program/fasm/win32_timer.htm">
+        Set Timer</a><br>
 <br><br><br><br>
 
 <div id="wine"></div>
