--- a/program.htm
+++ b/program.htm
@@ -712,9 +712,9 @@ Wine</h3>
         <a href="program/wine/cpp_timer.htm">
         Set Timer</a><br>
 
-            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-            <a href="program/wine/cpp_dlg_scrollbar.htm">
-            ScrollBar</a><br>
+        &emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="program/wine/cpp_scrollbar.htm">
+        Set ScrollBar</a><br>
             
             &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&oplus;
             Painting<br>
