--- a/program/wine/cpp_scrollbar.htm
+++ b/program/wine/cpp_scrollbar.htm
@@ -112,10 +112,15 @@ int WINAPI WinMain(HINSTANCE hInstance, HINSTANCE hPrevInstance, LPSTR lpCmdLine
 }
 </pre>
 <p>
+<b>Line 18~33</b>：處理ScrollBar訊息並且顯示在視窗標題<br>
+<b>Line 41</b>：WS_VSCROLL是垂直的ScrollBar，WS_HSCROLL則是水平的ScrollBar<br>
+<b>Line 44</b>：設定ScrollBar最大的範圍<br>
+<b>Line 45</b>：設定ScrollBar目前的位置<br><br>
+
 編譯、執行
 </p>
 <pre>
-$ winegcc main.c -o main -lgdi32
+$ winegcc main.c -o main
 $ wine ./main.exe
 </pre>
 <p>
