--- a/program/nasm/win32_dlg_window.htm
+++ b/program/nasm/win32_dlg_window.htm
@@ -115,7 +115,7 @@ _gdi32    db "/defaultlib:c:\\masm32\\lib\\gdi32.lib "
 _user32   db "/defaultlib:c:\\masm32\\lib\\user32.lib "
 _kernel32 db "/defaultlib:c:\\masm32\\lib\\kernel32.lib "
  
-    segment .data use32
+    segment .data
 szCaption   db "main",0
 hInstance   dd 0
 CommandLine dd 0
@@ -129,35 +129,35 @@ msg istruc MSG
     at .pt,      dd 0, 0
 iend
 
-    segment .text use32
+    segment .text
 WinMain:
     push ebp
     mov ebp, esp
 
-    push dword 0
-    push dword 0
-    push dword 0
-    push dword 0
-    push dword 300
-    push dword 300
-    push dword 0
-    push dword 0
-    push dword WS_OVERLAPPEDWINDOW | WS_VISIBLE
+    push 0
+    push 0
+    push 0
+    push 0
+    push 300
+    push 300
+    push 0
+    push 0
+    push WS_OVERLAPPEDWINDOW | WS_VISIBLE
     push szCaption
-    push dword WC_DIALOG
-    push dword WS_EX_LEFT
+    push WC_DIALOG
+    push WS_EX_LEFT
     call CreateWindowEx
 
 .loop:
-    push dword 0
-    push dword 0
-    push dword 0
-    push dword msg
+    push 0
+    push 0
+    push 0
+    push msg
     call GetMessage
     cmp eax, 0
     je .exit
 
-    push dword msg
+    push msg
     call DispatchMessage
     jmp .loop
 
@@ -167,16 +167,16 @@ WinMain:
     ret 16
 
 _start:
-    push dword 0
+    push 0
     call GetModuleHandle
     mov [hInstance], eax
 
     call GetCommandLine
     mov [CommandLine], eax
 
-    push dword SW_SHOWNORMAL
+    push SW_SHOWNORMAL
     push dword [CommandLine]
-    push dword 0
+    push 0
     push dword [hInstance]
     call WinMain
 
