--- a/program/nasm/win32_hello.htm
+++ b/program/nasm/win32_hello.htm
@@ -72,16 +72,16 @@ _gdi32    db "/defaultlib:c:\\masm32\\lib\\gdi32.lib "
 _user32   db "/defaultlib:c:\\masm32\\lib\\user32.lib "
 _kernel32 db "/defaultlib:c:\\masm32\\lib\\kernel32.lib "
 
-    segment .data use32
+    segment .data
 szCaption db "main",0
 szContent db "Hello, world",0
 
-    segment .text use32
+    segment .text
 _start:
-    push dword 0
-    push dword szCaption
-    push dword szContent
-    push dword 0
+    push 0
+    push szCaption
+    push szContent
+    push 0
     call MessageBox
 
     push 0
