Debian added shell usages.

--- a/system.htm
+++ b/system.htm
@@ -209,6 +209,10 @@ artistic style推薦參數</a><br>
 shell script "--" 用途</a><br>
 
 &lowast;
+<a href="system/debian/shell_expand.htm">
+shell script "$、{}、%、#" 用途</a><br>
+
+&lowast;
 <a href="system/debian/a650ua.htm">
 安裝TOTOLINK A650UA驅動程式</a><br>
 
