--- a/program/gnu/makefile_equ.htm
+++ b/program/gnu/makefile_equ.htm
@@ -54,11 +54,36 @@
 如下說明：
 </p>
 <table>
-  <tr><th>符號</th><th>說明</th></tr>
-  <tr><td>=</td><td>最後給值<br>x=100<br>y=$(x)<br>x=200<br><b>結果：x=200, y=200</b></td></tr>
-  <tr><td>:=</td><td>當下給值<br>x:=100<br>y:=$(x)<br>x=:200<br><b>結果：x=200, y=100</b></td></tr>
-  <tr><td>?=</td><td>變數爲空時給值<br>x?=100<br><b>結果：x=100</b></td></tr>
-  <tr><td>+=</td><td>附加<br>x=100<br>x+=200<br><b>結果：x=100 200</b></td></tr>
+    <tr>
+        <th>符號</th>
+        <th>說明</th>
+        <th>範例</th>
+        <th>結果</th>
+    </tr>
+    <tr>
+        <td>=</td>
+        <td>最後給值</td>
+        <td>x=100<br>y=$(x)<br>x=200</td>
+        <td>x=200, y=200</td>
+    </tr>
+    <tr>
+        <td>:=</td>
+        <td>當下給值</td>
+        <td>x:=100<br>y:=$(x)<br>x=:200</td>
+        <td>x=200, y=100</td>
+    </tr>
+    <tr>
+        <td>?=</td>
+        <td>變數爲空時給值</td>
+        <td>x?=100</td>
+        <td>x=100</td>
+    </tr>
+    <tr>
+        <td>+=</td>
+        <td>附加</td>
+        <td>x=100<br>x+=200</td>
+        <td>x=100 200</td>
+    </tr>
 </table><br>
 
 <p>
