NASM How to use scrollbar.

--- a/program.htm
+++ b/program.htm
@@ -433,6 +433,10 @@ Netwide Assembler (NASM)</h3>
         <a href="program/nasm/win32_timer.htm">
         Set Timer</a><br>
 
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="program/nasm/win32_scrollbar.htm">
+        Set ScrollBar</a><br>
+
     &emsp;&emsp;&emsp;&emsp;&oplus;
     <b>Win32 API (NASMX)</b><br>
 
