--- a/program/nasm/win32x_dlg_window.htm
+++ b/program/nasm/win32x_dlg_window.htm
@@ -64,7 +64,7 @@ main.asm
 
     entry start
 
-    section .data use32
+    section .data
 szCaption    declare(NASMX_TCHAR) NASMX_TEXT("main"),0
 CommandLine  dd 0
 hInstance    dd 0
@@ -81,7 +81,7 @@ NASMX_ISTRUC msg, MSG
     NASMX_IENDSTRUC
 NASMX_IENDSTRUC
 
-    section .text use32
+    section .text
 proc WinMain, dword hInst, dword hPrevInst, dword CmdLine, dword CmdShow
     locals none
 
