--- a/program/nasm/win32x_hello.htm
+++ b/program/nasm/win32x_hello.htm
@@ -64,11 +64,11 @@ main.asm
 
     entry start
 
-    section .data use32
+    section .data
 szCaption declare(NASMX_TCHAR) NASMX_TEXT("main"),0
 szContent declare(NASMX_TCHAR) NASMX_TEXT("Hello, world!"),0
 
-    section .text use32
+    section .text
 proc start, dword argc, dword argv
     locals none
 
