--- a/program/nasm/win32x_timer.htm
+++ b/program/nasm/win32x_timer.htm
@@ -65,7 +65,7 @@ main.asm
   
     entry start
   
-    section .data use32
+    section .data
 hWin         dd 0
 hInstance    dd 0
 defWndProc   dd 0
@@ -87,7 +87,7 @@ NASMX_ISTRUC msg, MSG
     NASMX_IENDSTRUC
 NASMX_IENDSTRUC
    
-    section .text use32
+    section .text
 proc WndProc, dword hWnd, uint_t uMsg, dword wParam, dword lParam
     locals none
 
