MASM32 How to set scrollbar.

--- a/program.htm
+++ b/program.htm
@@ -542,6 +542,10 @@ Mouse Event</a><br>
 &lowast;
 <a href="program/masm32/timer.htm">
 Set Timer</a><br>
+
+&lowast;
+<a href="program/masm32/scrollbar.htm">
+Set ScrollBar</a><br>
 <br><br><br><br>
 
 <div id="hla"></div>
