HLA How to use scrollbar.

--- a/program.htm
+++ b/program.htm
@@ -595,6 +595,10 @@ hello, world!</a><br>
     <a href="program/hla/win32_timer.htm">
     Set Timer</a><br>
 
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="program/hla/win32_scrollbar.htm">
+    Set ScrollBar</a><br>
+
 &lowast;
 <a href="program/hla/fix_wc_dialog.htm">
 解決w.WC_DIALOG定義錯誤問題</a><br>
