--- a/program.htm
+++ b/program.htm
@@ -676,6 +676,10 @@ Flat Assembler (FASM)</h3>
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
         <a href="program/fasm/win32_timer.htm">
         Set Timer</a><br>
+        
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="program/fasm/win32_scrollbar.htm">
+        Set ScrollBar</a><br>
 <br><br><br><br>
 
 <div id="wine"></div>
