--- a/program/hla/win32_scrollbar.htm
+++ b/program/hla/win32_scrollbar.htm
@@ -112,7 +112,7 @@ begin WinMain;
         w.WS_OVERLAPPEDWINDOW | w.WS_VISIBLE | w.WS_VSCROLL, 0, 0, 300, 300, 0, 0, NULL, NULL);
     mov(eax, hWin);
     
-    w.SetWindowLong(hWin, w.GWL_WNDPROC, &WndProc);
+    w.SetWindowLong(hWin, w.GWL_WNDPROC, &amp;WndProc);
     mov(eax, defWndProc);
 
     w.SetScrollRange(hWin, w.SB_VERT, 0, 100, false);
