--- a/program/wine/cpp_pixel.htm
+++ b/program/wine/cpp_pixel.htm
@@ -53,6 +53,8 @@
 2. <a href="http://www.winprog.org/tutorial/">tutorial</a><br>
 3. <a href="https://github.com/gammasoft71/Examples_Win32">examples_win32</a><br><br>
 
+屏幕的最小顯示單位是像素，像素由紅色(Red)、綠色(Green)、藍色(Blue)、Alpha等四個顏色組成，因此，在呼叫CreateWindow()時，傳入的解析度，如：300x300，代表該視窗(有效區域)的X軸有300個像素，而Y軸則是有300個像素，這個300x300像素的區域是可以用來繪製任何東西，WM_PAINT是處理視窗重新繪畫的事件，繪畫的相關處理都需要在這個事件完成，比較特別的是，Windows視窗將繪圖的許多東西抽象化，最基本的需求是：一個DC(Device Context)和一個BITMAP，DC可以想像成是一個畫台，而BITMAP則是一片畫布(Buffer)，DC有了Buffer就可以畫上任何東西並將其顯示在視窗上<br><br>
+
 main.c
 </p>
 <pre class="brush:cpp">
@@ -98,8 +100,13 @@ int WINAPI WinMain(HINSTANCE hInstance, HINSTANCE hPrevInstance, LPSTR lpCmdLine
     ExitProcess(0);
     return 0;
 }
-</pre><br>
+</pre>
 <p>
+<b>Line 15~25</b>：處理繪畫事件<br>
+<b>Line 18</b>：取得視窗的DC，該DC已經有Buffer可以使用，因此，可以直接在上面繪製任何東西<br>
+<b>Line 19~23</b>：透過SetPixel()畫出一個正方形，顏色是紅色<br>
+<b>Line 24</b>：結束繪製<br><br>
+
 編譯、執行
 </p>
 <pre>
