NASM How to set pixels.

--- a/program.htm
+++ b/program.htm
@@ -437,6 +437,13 @@ Netwide Assembler (NASM)</h3>
         <a href="program/nasm/win32_scrollbar.htm">
         Set ScrollBar</a><br>
 
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&oplus;
+        <b>Painting</b><br>
+
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+            <a href="program/nasm/win32_pixel.htm">
+            Set Pixel</a><br>
+
     &emsp;&emsp;&emsp;&emsp;&oplus;
     <b>Win32 API (NASMX)</b><br>
 
