NASMX How to set pixels.

--- a/program.htm
+++ b/program.htm
@@ -482,6 +482,13 @@ Netwide Assembler (NASM)</h3>
         <a href="program/nasm/win32x_scrollbar.htm">
         Set ScrollBar</a><br>
 
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&oplus;
+        <b>Painting</b><br>
+
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+            <a href="program/nasm/win32x_pixel.htm">
+            Set Pixel</a><br>
+
 &oplus;
 <b>Assembly (x64)</b><br>
 
