MASM32 How to set pixels.

--- a/program.htm
+++ b/program.htm
@@ -560,6 +560,13 @@ Set Timer</a><br>
 &lowast;
 <a href="program/masm32/scrollbar.htm">
 Set ScrollBar</a><br>
+
+&oplus;
+<b>Painting</b><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="program/masm32/pixel.htm">
+    Set Pixel</a><br>
 <br><br><br><br>
 
 <div id="hla"></div>
