--- a/program.htm
+++ b/program.htm
@@ -620,6 +620,12 @@ hello, world!</a><br>
     <a href="program/hla/win32_scrollbar.htm">
     Set ScrollBar</a><br>
 
+    &emsp;&emsp;&emsp;&emsp;&oplus;
+    <b>Painting</b><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="program/hla/win32_pixel.htm">
+        Set Pixel</a><br>
 &lowast;
 <a href="program/hla/fix_wc_dialog.htm">
 解決w.WC_DIALOG定義錯誤問題</a><br>
