--- a/program/nasm/win32x_pixel.htm
+++ b/program/nasm/win32x_pixel.htm
@@ -44,7 +44,7 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>Netwide Assembler (NASM) &gt;&gt; Assembly (x86) &gt;&gt; Win32 API (NASMX)</h3>
+<h3>Netwide Assembler (NASM) &gt;&gt; Assembly (x86) &gt;&gt; Win32 API (NASMX) &gt;&gt; Painting</h3>
 <p><b>Set Pixel</b></p>
 <hr size="1">
 <p>
