--- a/program/masm32/pixel.htm
+++ b/program/masm32/pixel.htm
@@ -44,7 +44,7 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>MASM32</h3>
+<h3>MASM32 &gt;&gt; Painting</h3>
 <p><b>Set Pixel</b></p>
 <hr size="1">
 <p>
